practice/9.deploy-and-template/blue-green/blue-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-blue
  labels:
    app: myapp
    deploy: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
      deploy: blue
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: myapp
        deploy: blue
    spec:
      containers:
        - image: nginx:1.13
          name: myapp
          ports:
            - containerPort: 80
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 80
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 80
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            initialDelaySeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/conf.d/
      volumes:
        - name: config
          configMap:
            name: configmap-blue
