practice/9.deploy-and-template/blue-green/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myapp
  name: myapp
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: myapp
    deploy: green
  type: ClusterIP
